k8s/ab-testing/deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-ab-a
  namespace: __NAMESPACE__
  labels:
    app: aceest-fitness
    strategy: ab
    variant: a
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: aceest-fitness
      strategy: ab
      variant: a
  template:
    metadata:
      labels:
        app: aceest-fitness
        strategy: ab
        variant: a
    spec:
      containers:
        - name: aceest
          image: __STABLE_IMAGE__
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
