k8s/ab-testing/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-ab-a
  namespace: __NAMESPACE__
spec:
  selector:
    app: aceest-fitness
    strategy: ab
    variant: a
  ports:
    - name: http
      port: 80
      targetPort: 5000
